--- a/quadratic_solver/makefile
+++ b/quadratic_solver/makefile
@@ -1,12 +1,22 @@
-quadratic.o: quadratic.c
-	gcc -g -c quadratic.c -o quadratic.o 
+CC = gcc
+CFLAGS = -g
+LDFLAGS = -lm
+
+all: quadratic_test
+
+quadratic.o: quadratic.c quadratic.h
+	$(CC) $(CFLAGS) -c quadratic.c -o quadratic.o
 
 quadratic.a: quadratic.o
 	ar rc quadratic.a quadratic.o
-quadratic_test.o: quadratic_test.c
-	gcc -g -c quadratic_test.c -o quadratic_test.o
+
+quadratic_test.o: quadratic_test.c quadratic.h
+	$(CC) $(CFLAGS) -c quadratic_test.c -o quadratic_test.o
 
 quadratic_test: quadratic_test.o quadratic.a
-	gcc -g -o quadratic_test quadratic_test.o quadratic.a -lm
+	$(CC) $(CFLAGS) -o quadratic_test quadratic_test.o quadratic.a $(LDFLAGS)
 
-  
+clean:
+	rm -f quadratic_test quadratic_test.o quadratic.o quadratic.a
+
+.PHONY: all clean
