--- a/Linked_List/Makefile
+++ b/Linked_List/Makefile
@@ -1,6 +1,5 @@
 CC = gcc
 
-
 all: Linked_List_test
 
 Linked_List.o: Linked_List.h Linked_List.c
@@ -15,4 +14,7 @@ Linked_List_test.o: Linked_List_test.c
 Linked_List_test: Linked_List_test.o Linked_List.a
 	${CC} -g -static -o Linked_List_test Linked_List_test.o Linked_List.a
 
-.PHONY: all
+test: Linked_List_test
+	./Linked_List_test
+
+.PHONY: all test
