--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches:
       - main
- 
+
 jobs: 
   build:
     runs-on: ubuntu-latest
@@ -18,12 +18,10 @@ jobs:
 
       - name: Build project
         run: |
-          find . -mindepth 2 -name 'Makefile' -execdir make all \;
+          cd Linked_List
+          make all
 
       - name: Run tests
         run: |
+          cd Linked_List
           make test
-
-      - name: Check format
-        run: |
-          make check_fmt
