--- a/Array-basedStack/Makefile
+++ b/Array-basedStack/Makefile
@@ -1,20 +1,24 @@
 CC = gcc
+CFLAGS = -g
 
 all: Array-basedStack_test
 
-Array-basedStack.o: Array-basedStack.h Array-basedStack.c
-	@${CC} -g -c Array-basedStack.c -o Array-basedStack.o
+Array-basedStack.o: Array-basedStack.c Array-basedStack.h
+	${CC} ${CFLAGS} -c Array-basedStack.c -o Array-basedStack.o
+
+Array-basedStack_test.o: Array-basedStack_test.c Array-basedStack.h
+	${CC} ${CFLAGS} -c Array-basedStack_test.c -o Array-basedStack_test.o
 
 Array-basedStack.a: Array-basedStack.o
-	@ar rc Array-basedStack.a Array-basedStack.o
-
-Array-basedStack_test.o: Array-basedStack_test.c
-	@${CC} -g -c Array-basedStack_test.c -o Array-basedStack_test.o
+	ar rc Array-basedStack.a Array-basedStack.o
 
 Array-basedStack_test: Array-basedStack_test.o Array-basedStack.a
-	@${CC} -g -static -o Array-basedStack_test Array-basedStack_test.o Array-basedStack.a
+	${CC} ${CFLAGS} -o Array-basedStack_test Array-basedStack_test.o Array-basedStack.a
 
 test: Array-basedStack_test
-	@./*_test
+	./Array-basedStack_test
 
-.PHONY: all
+clean:
+	rm -f *.o *.a Array-basedStack_test
+
+.PHONY: all test clean
