--- a/Array-basedStack/Makefile
+++ b/Array-basedStack/Makefile
@@ -9,16 +9,16 @@ Array-basedStack.o: Array-basedStack.c Array-basedStack.h
 Array-basedStack_test.o: Array-basedStack_test.c Array-basedStack.h
 	${CC} ${CFLAGS} -c Array-basedStack_test.c -o Array-basedStack_test.o
 
-Array-basedStack.a: Array-basedStack.o
-	ar rc Array-basedStack.a Array-basedStack.o
-
-Array-basedStack_test: Array-basedStack_test.o Array-basedStack.a
-	${CC} ${CFLAGS} -o Array-basedStack_test Array-basedStack_test.o Array-basedStack.a
+Array-basedStack_test: Array-basedStack_test.o Array-basedStack.o
+	${CC} ${CFLAGS} -o Array-basedStack_test Array-basedStack_test.o Array-basedStack.o
 
 test: Array-basedStack_test
 	./Array-basedStack_test
 
-clean:
-	rm -f *.o *.a Array-basedStack_test
+check_fmt:
+	clang-format -i *.c *.h
 
-.PHONY: all test clean
+clean:
+	rm -f *.o Array-basedStack_test
+
+.PHONY: all test check_fmt clean
