--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,17 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y build-essential clang-format
 
       - name: Build project
-        run: make all
+        run: make -C Array-basedStack all
 
       - name: Run tests
-        run: make test
+        run: make -C Array-basedStack test
 
       - name: Check format
-        run: make check_fmt
+        run: make -C Array-basedStack check_fmt
+
+      - name: Upload test results (optional)
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-results
+          path: test_definite_integral
