--- a/Definite_integral/Makefile
+++ b/Definite_integral/Makefile
@@ -1,10 +1,11 @@
+TARGET = test_definite_integral
+LIBNAME = definite_integral
 CC = gcc
 CFLAGS = -Wall -Wextra -g -std=c99 -pedantic
-
-TARGET = test_definite_integral
-LIBNAME = definiteintegral
 LIBOBJS = definite_integral.o
 TESTOBJS = test_definite_integral.o
+LIBSOURCE = definite_integral.c
+TESTSOURCE = test_definite_integral.c
 HEADERS = definite_integral.h
 
 %.o: %.c $(HEADERS)
@@ -18,13 +19,16 @@ $(TARGET): $(TESTOBJS) lib$(LIBNAME).a
 
 all: $(TARGET)
 
-test: $(TARGET)
+run: $(TARGET)
 	./$(TARGET)
-
-check_fmt:
-	clang-format -n --style=Google *.c *.h
 
 clean:
 	rm -f $(LIBOBJS) $(TESTOBJS) lib$(LIBNAME).a $(TARGET)
 
 rebuild: clean all
+
+test: $(TARGET)
+	./$(TARGET)
+
+check_fmt:
+	clang-format -n --style=Google $(LIBSOURCE) $(TESTSOURCE) $(HEADERS)
