--- a/Definite_integral/Makefile
+++ b/Definite_integral/Makefile
@@ -1,34 +1,36 @@
 TARGET = test_definite_integral
 LIBNAME = definiteintegral
 CC = gcc
-CFLAGS = -Wall -Wextra -g -std=c99 -pedantic 
-LIBOBJS = definite_integral.o
-TESTOBJS = test_definite_integral.o
-LIBSOURCE = definite_integral.c
+CFLAGS = -Wall -Wextra -g -std=c99 -pedantic
+
+LIBSOURCE  = definite_integral.c
 TESTSOURCE = test_definite_integral.c
-HEADERS = definite_integral.h
+HEADERS    = definite_integral.h
+
+LIBOBJS  = $(LIBSOURCE:.c=.o)
+TESTOBJS = $(TESTSOURCE:.c=.o)
 
 %.o: %.c $(HEADERS)
-  $(CC) $(CFLAGS) -c $< -o $@
+	$(CC) $(CFLAGS) -c $< -o $@
 
 lib$(LIBNAME).a: $(LIBOBJS)
-  ar rcs $@ $^ 
+	ar rcs $@ $^
 
 $(TARGET): $(TESTOBJS) lib$(LIBNAME).a
-  $(CC) $(CFLAGS) $(TESTOBJS) -L. -l$(LIBNAME) -lm -o $@
+	$(CC) $(CFLAGS) $(TESTOBJS) -L. -l$(LIBNAME) -lm -o $@
 
 all: $(TARGET)
 
 run: $(TARGET)
-  ./$(TARGET)
+	./$(TARGET)
+
+test: $(TARGET)
+	./$(TARGET)
 
 clean:
-  rm -f $(LIBOBJS) $(TESTOBJS) lib$(LIBNAME).a $(TARGET)
+	rm -f $(LIBOBJS) $(TESTOBJS) lib$(LIBNAME).a $(TARGET)
 
 rebuild: clean all
 
-test: $(TARGET)
-  ./$(TARGET)
-
 check_fmt:
-  clang-format -n --style=Google *.c *.h
+	clang-format -n --style=Google $(LIBSOURCE) $(TESTSOURCE) $(HEADERS)
