--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: Definite_integral
 
     steps:
       - name: Checkout code
@@ -17,17 +20,17 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y build-essential clang-format
 
       - name: Build project
-        run: make -C Definite_integral all
+        run: make all
 
       - name: Run tests
-        run: make -C Definite_integral test
+        run: make test
 
       - name: Check format
-        run: make -C Definite_integral check_fmt
+        run: make check_fmt
 
       - name: Upload test results (optional)
         if: always()
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: test-results
-          path: Definite_integral/test_definite_integral
+          path: test_definite_integral
