--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,9 @@
-name: CI
+name: CI Pipeline
 
 on:
+  push:
+    branches:
+      - main
   pull_request:
     branches:
       - main
@@ -10,23 +13,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      - name: Set up GCC
-        run: sudo apt-get update && sudo apt-get install -y build-essential clang-format
+    - name: Set up GCC
+      run: sudo apt-get install gcc
 
-      - name: Build project
-        run: |
-          cd Definite_integral
-          make all
+    - name: Build the project
+      run: |
+        make all
 
-      - name: Run tests
-        run: |
-          cd Definite_integral
-          make test
-
-      - name: Check format
-        run: |
-          cd Definite_integral
-          make check_fmt
+    - name: Run tests
+      run: |
+        make test
