--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,9 +17,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Set up GCC
-      uses: actions/setup-gcc@v2
-      with:
-        gcc-version: '10'
+      run: sudo apt-get update && sudo apt-get install -y gcc
 
     - name: Build
       run: make
