--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,26 +1,27 @@
-name: CI Pipeline
+name: CI
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
     branches:
       - main
 
-jobs:
+jobs: 
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up GCC
-      run: sudo apt-get update && sudo apt-get install -y gcc
+      - name: Set up GCC
+        run: sudo apt-get install -y build-essential
 
-    - name: Build
-      run: make
+      - name: Build project
+        run: |
+          cd Definite_integral
+          make all
 
-    - name: Run Tests
-      run: make run
+      - name: Run tests
+        run: |
+          cd Definite_integral
+          make test
