--- a/Definite_integral/Makefile
+++ b/Definite_integral/Makefile
@@ -2,7 +2,7 @@ CC=gcc
 CFLAGS=-Wall -Werror
 TEST_FLAGS=-lcheck
 
-SRC=definite_integral.c
+SRC=definite_integral.c test_definite_integral.c
 OBJ=$(SRC:.c=.o)
 EXEC=definite_integral
 
