--- a/Definite_integral/Makefile
+++ b/Definite_integral/Makefile
@@ -5,6 +5,7 @@ TEST_FLAGS=-lcheck
 SRC=definite_integral.c test_definite_integral.c
 OBJ=$(SRC:.c=.o)
 EXEC=definite_integral
+TEST_EXEC=test_definite_integral
 
 all: $(EXEC)
 
@@ -14,9 +15,9 @@ $(EXEC): $(OBJ)
 %.o: %.c
 	$(CC) $(CFLAGS) -c $<
 
-test: $(EXEC)
-	gcc $(EXEC) -o test_definite_integral test_definite_integral.c $(TEST_FLAGS)
-	./test_definite_integral
+test: $(OBJ)
+	gcc $(OBJ) -o $(TEST_EXEC) test_definite_integral.c $(TEST_FLAGS)
+	./$(TEST_EXEC)
 
 clean:
-	rm -f *.o $(EXEC) test_definite_integral
+	rm -f *.o $(EXEC) $(TEST_EXEC)
