--- a/Definite_integral/Makefile
+++ b/Definite_integral/Makefile
@@ -1,22 +1,24 @@
-CC=gcc
-CFLAGS=-Wall -Werror
-TEST_FLAGS=-lcheck
+CC = gcc
+CFLAGS = -g
 
-SRC=definite_integral.c
-OBJ=$(SRC:.c=.o)
-EXEC=definite_integral
+all: test_definite_integral
 
-all: $(EXEC)
+definite_integral.o: definite_integral.c definite_integral.h
+	${CC} ${CFLAGS} -c definite_integral.c -o definite_integral.o
 
-$(EXEC): $(OBJ)
-	$(CC) $(OBJ) -o $(EXEC)
+test_definite_integral.o: test_definite_integral.c definite_integral.h
+	${CC} ${CFLAGS} -c test_definite_integral.c -o test_definite_integral.o
 
-%.o: %.c
-	$(CC) $(CFLAGS) -c $<
+definite_integral.a: definite_integral.o
+	ar rc definite_integral.a definite_integral.o
 
-test: $(EXEC)
-	$(CC) $(OBJ) test_definite_integral.c -o test_definite_integral $(TEST_FLAGS)
+test_definite_integral: test_definite_integral.o definite_integral.a
+	${CC} ${CFLAGS} -o test_definite_integral test_definite_integral.o definite_integral.a
+
+test: test_definite_integral
 	./test_definite_integral
 
 clean:
-	rm -f *.o $(EXEC) test_definite_integral
+	rm -f *.o *.a test_definite_integral
+
+.PHONY: all test clean
