--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,27 +1,22 @@
 name: CI
 
 on:
-  push:
-    branches:
-      - main  # или develop, если у вас другая основная ветка
   pull_request:
-    branches:
-      - main # или develop
+      branches:
+        - main
 
 jobs:
   build:
-    runs-on: ubuntu-latest # Или другой runner, если требуется
+    runs-on: ubuntu-latest 
 
     steps:
-      - uses: actions/checkout@v3  # Checkout code from the repository
+      - name: Checkout code
+        uses: actions/checkout@v2
 
       - name: Set up GCC
-        uses: actions/setup-gcc@v3
-        with:
-          gcc-version: '10' # Укажите версию GCC, которую хотите использовать
+        run: sudo apt-get install -y build-essential
 
-      - name: Build
-        run: make  # Запускаем Makefile для сборки проекта
-
-      - name: Run Tests
-        run: make run # Запускаем тесты, предполагая, что в Makefile есть цель "run"
+      - name: Build project
+        run: |
+          cd Definite_integral
+          make all
