--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest # Или другой runner, если требуется
-
+    permissions:
+      actions: read  # Необходимо для доступа к actions
+      contents: read # Необходимо для checkout
     steps:
       - uses: actions/checkout@v4  # Checkout code from the repository
 
