--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,12 +15,11 @@ jobs:
       actions: read  # Необходимо для доступа к actions
       contents: read # Необходимо для checkout
     steps:
-      - uses: actions/checkout@v4  # Checkout code from the repository
+      - name: Checkout code
+        uses: actions/checkout@v2
 
       - name: Set up GCC
-        uses: actions/setup-gcc@v3
-        with:
-          gcc-version: '12' # Укажите версию GCC, которую хотите использовать
+        run: sudo apt-get install -y build-essential
 
       - name: Build
         run: make  # Запускаем Makefile для сборки проекта
