--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,7 @@ name: CI
 
 on:
   pull_request:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   build:
@@ -11,19 +10,14 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: Set up GCC
+      - name: Install dependencies
         run: sudo apt-get install -y build-essential
 
-      - name: Build project
+      - name: Build and test
         run: |
-          cd array-based_stack
+          cd task_7/array-based_stack
           make all
-
-      - name: Run tests
-        run: |
-          cd array-based_stack
           make test
-
 
