--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,35 +1,36 @@
-name: CI
+name: CI Pipeline
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
- 
-jobs: 
-  build:
+on: pull_request
+
+jobs:
+  check_formatting:
+    name: Check Code Formatting
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+      
+      - name: Install clang-format
+        run: sudo apt-get install -y clang-format
+        
+      - name: Check formatting
+        run: make check_fmt
 
-      - name: Set up GCC
-        run: sudo apt-get install -y build-essential
-
-      - name: Build project
+  build_and_test:
+    name: Build and Test
+    runs-on: ubuntu-latest
+    needs: check_formatting
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gcc make
+          
+      - name: Build and test
         run: |
           make all
-          find . -name 'Makefile' -execdir make all \;
-
-      - name: Run tests
-        run: |
           make test
-          find . -name 'Makefile' -execdir make test \;
-
-      - name: Check format
-        run: |
-          make check_fmt
-          find . -name 'Makefile' -execdir make check_fmt \;
+          
+      - name: Clean up
+        run: make clean
