--- a/linaer_allocator/Makefile
+++ b/linaer_allocator/Makefile
@@ -4,6 +4,9 @@ LDFLAGS = -lm
 
 all: linearAlloc_test
 
+fmt:
+	clang-format -style=LLVM -i `find -regex ".+\.[ch]"`
+	
 linearAlloc.o: linearAlloc.c linearAlloc.h
 	$(CC) $(CFLAGS) -c linearAlloc.c -o linearAlloc.o
 
@@ -13,10 +16,11 @@ linearAlloc.a: linearAlloc.o
 linearAlloc_test.o: linearAlloc_test.c linearAlloc.h
 	$(CC) $(CFLAGS) -c linearAlloc_test.c -o linearAlloc_test.o
 
-linearAlloc_test: linearAlloc_test.o linearAlloc.a
+linearAlloc_test: linearAlloc_test.o linearAlloc.a fmt
 	$(CC) $(CFLAGS) -o linearAlloc_test linearAlloc_test.o linearAlloc.a $(LDFLAGS)
 
 clean:
 	rm -f linearAlloc_test linearAlloc_test.o linearAlloc.o linearAlloc.a
+
 
 .PHONY: all clean
