--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,36 +1,35 @@
-name: CI Pipeline
+name: Build and Test
 
-on: {push, pull_request}
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  check_formatting:
-    name: Check Code Formatting
+  build-and-test:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Install clang-format
-        run: sudo apt-get install -y clang-format
-        
-      - name: Check formatting
-        run: make check_fmt
 
-  build_and_test:
-    name: Build and Test
-    runs-on: ubuntu-latest
-    needs: check_formatting
     steps:
-      - uses: actions/checkout@v4
-      
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y gcc make
-          
-      - name: Build and test
-        run: |
-          make all
-          make test
-          
-      - name: Clean up
-        run: make clean
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Cache Dependencies
+        uses: actions/cache@v3
+        with:
+          path: /usr/bin/gcc
+          key: ${{ runner.os }}-gcc-${{ github.run_id }}
+
+      - name: Install Dependencies
+        run: sudo apt-get update && sudo apt-get install -y build-essential
+
+      - name: Compile and Run Tests
+        run: make all && make test | tee test_output.log
+
+      - name: Upload Test Logs
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-logs
+          path: test_output.log
