--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,36 +1,32 @@
-name: CI Pipeline
+name: CI
 
-on: {push, pull_request}
+on:
+  push:
+    branches:
+      - main
+      - task_2.2
+  pull_request:
+    branches:
+      - main
+      - task_2.2
 
 jobs:
-  check_formatting:
-    name: Check Code Formatting
+  build:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Install clang-format
-        run: sudo apt-get install -y clang-format
-        
-      - name: Check formatting
-        run: make check_fmt
 
-  build_and_test:
-    name: Build and Test
-    runs-on: ubuntu-latest
-    needs: check_formatting
     steps:
-      - uses: actions/checkout@v4
-      
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y gcc make
-          
-      - name: Build and test
-        run: |
-          make all
-          make test
-          
-      - name: Clean up
-        run: make clean
+        run: sudo apt-get update && sudo apt-get install -y build-essential clang-format
+
+      - name: Build project
+        run: make -C task_2.2/pool_allocator all
+
+      - name: Run tests
+        run: make -C task_2.2/pool_allocator test
+
+      - name: Check format
+        run: make -C task_2.2/pool_allocator check-format
+
