--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,22 +1,41 @@
-name: CI
+name: CI Pipeline
 
-on:
-  pull_request:
-      branches:
-        - main
+on: [push, pull_request]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest 
-
+  check_formatting:
+    name: Check Code Formatting
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+      
+      - name: Install clang-format
+        run: sudo apt-get install -y clang-format
+        
+      - name: Check formatting
+        run: make check_fmt
 
-      - name: Set up GCC
-        run: sudo apt-get install -y build-essential
-
-      - name: Build project
+  build_and_test:
+    name: Build and Test
+    runs-on: ubuntu-latest
+    needs: check_formatting
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Install dependencies
         run: |
-          cd Definite_integral
-          make all
+          sudo apt-get update
+          sudo apt-get install -y gcc make valgrind
+          
+      - name: Build
+        run: make all
+          
+      - name: Run tests
+        run: make test
+        
+      - name: Memory check with Valgrind
+        run: make valgrind
+          
+      - name: Clean up
+        run: make clean
+        
